<resources>
    <string name="app_name">Nearmate</string>
    <string name="title_activity_home">Home</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users">Users</string>
    <string name="map">Map</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="friendship_first">Friendship first…</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_lastname">Enter your lastname</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_firstname">Enter your firstname</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="get_started">Get Started</string>
    <string name="send">Send</string>
    <string name="Whats_your_email">What\'s your email?</string>
    <string name="forgot_password_subheader">You\'ll receive a temporary link to reset your password withing a few minutes.</string>
    <string name="home">Home</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="let_s_find_a_friend_near_you">Let\'s find a friend near you</string>
    <string name="home_greeting_generic">Hey there</string>
    <string name="home_greeting">Hey %1$s</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username (optional)</string>
    <string name="prefer_to_show_username">Prefer to show username</string>
    <string name="country">Country</string>
    <string name="status">Status</string>
    <string name="presence">Presence</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="select_image_source">Select Image Source</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="back">Back</string>
    <string name="start_typing_to_send_a_message">Start typing to send a message...</string>
    <string name="no_messages_found">No messages found. Find a new friend to start chatting</string>
</resources>