<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp">

            <TextView
                android:id="@+id/profileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="34sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profilePhoto"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/profile_photo"
                android:scaleType="centerCrop"
                android:background="@drawable/circle_background"
                android:clipToOutline="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileTitle"
                app:srcCompat="@drawable/baseline_account_circle_24" />

            <ImageButton
                android:id="@+id/editPhotoButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:contentDescription="@string/edit_photo"
                android:padding="8dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="@+id/profilePhoto"
                app:layout_constraintEnd_toEndOf="@+id/profilePhoto"
                app:srcCompat="@drawable/ic_edit" />

            <TextView
                android:id="@+id/firstNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/first_name"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profilePhoto" />

            <EditText
                android:id="@+id/firstNameInput"
                android:layout_width="357dp"
                android:layout_height="55dp"
                android:layout_marginStart="27dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="27dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/enter_your_firstname"
                android:inputType="text"
                android:paddingLeft="18dp"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameTv" />

            <TextView
                android:id="@+id/lastNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/last_name"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameInput" />

            <EditText
                android:id="@+id/lastNameInput"
                android:layout_width="357dp"
                android:layout_height="55dp"
                android:layout_marginStart="27dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="27dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/enter_your_lastname"
                android:inputType="text"
                android:paddingLeft="18dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastNameTv" />

            <TextView
                android:id="@+id/usernameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/username"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastNameInput" />

            <EditText
                android:id="@+id/usernameInput"
                android:layout_width="357dp"
                android:layout_height="55dp"
                android:layout_marginStart="27dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="27dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/enter_your_username"
                android:inputType="text"
                android:paddingLeft="18dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameTv" />

            <CheckBox
                android:id="@+id/preferUsernameCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins"
                android:text="@string/prefer_to_show_username"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

            <TextView
                android:id="@+id/statusTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/status"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/preferUsernameCheckbox" />

            <Spinner
                android:id="@+id/statusSpinner"
                android:layout_width="357dp"
                android:layout_height="55dp"
                android:layout_marginStart="27dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="27dp"
                android:background="@drawable/spinner_background"
                android:paddingLeft="18dp"
                android:paddingRight="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statusTv" />

            <TextView
                android:id="@+id/presenceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/presence"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statusSpinner" />

            <LinearLayout
                android:id="@+id/presenceToggleContainer"
                android:layout_width="357dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="27dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/presenceTv">

                <TextView
                    android:id="@+id/presenceToggleLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:text="@string/offline"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/presenceToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumbTint="@color/switch_thumb_color"
                    android:trackTint="@color/switch_track_color"
                    app:trackTint="@color/switch_track_color"
                    app:thumbTint="@color/switch_thumb_color" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/saveButtonContainer"
                android:layout_width="357dp"
                android:layout_height="55dp"
                android:layout_marginStart="27dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="27dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/presenceToggleContainer">

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_corner"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textAllCaps="false" />

                <ProgressBar
                    android:id="@+id/saveProgressBar"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:visibility="gone"
                    android:indeterminate="true"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/white"
                    android:indeterminateTintMode="src_in" />

            </FrameLayout>

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="357dp"
                android:layout_height="55dp"
                android:layout_marginStart="27dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="27dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/logout"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saveButtonContainer" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
